--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>animate-builder</title>
+    <title>Animation Builder</title>
+    <meta name="description" content="Vue.js - Intuitive, Fast and Composable MVVM for building interactive interfaces.">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="icon" href="//vuejs.org/images/logo.png" type="image/x-icon">
+    <link href="//cdn.bootcss.com/normalize/5.0.0/normalize.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="//cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
+    <script src="//cdn.bootcss.com/velocity/1.4.1/velocity.min.js"></script>
+    <script src="//cdn.bootcss.com/velocity/1.4.1/velocity.ui.min.js"></script>
   </body>
 </html>
