feat: css-builder

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="icon" href="//vuejs.org/images/logo.png" type="image/x-icon">
     <link href="//cdn.bootcss.com/normalize/5.0.0/normalize.min.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/prism/9000.0.1/themes/prism-okaidia.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
@@ -14,5 +16,9 @@
     <script src="//cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
     <script src="//cdn.bootcss.com/velocity/1.4.1/velocity.min.js"></script>
     <script src="//cdn.bootcss.com/velocity/1.4.1/velocity.ui.min.js"></script>
+
+    <script src="//cdn.bootcss.com/prism/9000.0.1/prism.min.js"></script>
+    <!--<script src="//cdn.bootcss.com/prism/1.6.0/components/prism-css.min.js"></script>-->
+    <script src="//cdn.bootcss.com/prism/1.6.0/components/prism-css-extras.min.js"></script>
   </body>
 </html>
