--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="//cdn.bootcss.com/normalize/5.0.0/normalize.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/prism/9000.0.1/themes/prism-okaidia.min.css" rel="stylesheet">
-    <style>#app {font-family: 'Avenir', Helvetica, Arial, sans-serif;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale;color: #2c3e50;}</style>
+    <style>#app {font-family: 'Avenir', Helvetica, Arial, sans-serif;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale;color: #2c3e50;}
+    .et-wrapper.animated.et-left {left: 10px;}.et-wrapper.animated.et-bottom {bottom: 10px;}</style>
   </head>
   <body>
     <div id="app"></div>
@@ -21,5 +22,18 @@
     <script src="//cdn.bootcss.com/prism/9000.0.1/prism.min.js"></script>
     <!--<script src="//cdn.bootcss.com/prism/1.6.0/components/prism-css.min.js"></script>-->
     <script src="//cdn.bootcss.com/prism/1.6.0/components/prism-css-extras.min.js"></script>
+
+    <!--<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyB3vEpbhI0nu-pnGvDtJMtpdU4MCdX6x8U",
+        authDomain: "animation-builder.firebaseapp.com",
+        databaseURL: "https://animation-builder.firebaseio.com",
+        storageBucket: "animation-builder.appspot.com",
+        messagingSenderId: "781471981564"
+      };
+      firebase.initializeApp(config);
+    </script>-->
   </body>
 </html>
